--- a/index.html
+++ b/index.html
@@ -24,15 +24,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&amp;display=swap" rel="stylesheet">
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-WGZR7KKSDR"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-WGZR7KKSDR');
-</script>
 	
 
 </head>
@@ -154,14 +146,14 @@
                   <div id="mobile-back-button" draggable="true">
                     <i class="bi bi-x-circle-fill"></i>
                   </div>
-                  <iframe class="game-iframe" id="game-area" src="https://azgames.io/game/slope/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen=""></iframe>
+                  <iframe class="game-iframe" id="game-area" src="https://clusterrush.io/game/cluster-rush/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen=""></iframe>
                 </div>
               </div>
 
 
               <div class="game-info">
                 <div class="header-left">
-                  <h1 class="single-title">slope unblocked</h1>
+                  <h1 class="single-title">cluster rush</h1>
 
 
                 </div>
@@ -322,7 +314,7 @@
 
 &nbsp; &nbsp; &nbsp; 
 <!-- Category section -->
-<h3 class="section-title">slope unblocked games</h3>
+<h3 class="section-title">cluster rush unblocked</h3>
 <div class="row grid-container" id="new-games-section">
 
 
@@ -497,7 +489,7 @@
 
 
 <!-- Popular games section -->
-<h3 class="section-title">slope Game</h3>
+<h2 class="section-title">Cluster Rush|TopVAZ</h2>
 <div class="row grid-container">
       
 
@@ -1292,8 +1284,8 @@
 
 	<div class="footer-copyright py-4">
 		<div class="container">
-			<a href="/">Slope Unblocked</a>			<span class="dsb-panel">
-<a href="https://slopeunblocked-online.github.io/">slopeunblocked-online.github.io</a>&nbsp;	</div>
+			<a href="/">cluster rush</a>			<span class="dsb-panel">
+<a href="https://cluster-rush-online.github.io/">cluster-rush-online.github.io</a>&nbsp;	</div>
 	</div>
 
 
