--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Slope Unblocked</title>
-  <meta name="description" content="Slope Unblocked is a fast,paced 3D ball runner! Navigate neon slopes at high speed dodge obstacles & test your reflexes. Play free now.">
-  <meta name="keywords" content="slope unblocked, slope games, Unblocked slope game, unblocked slope, slope game unblocked, slope unblocked, play slope game online, slope game free, how to play slope game, slope game cheats, slope game download, best tips for slope game, slope game high scores, slope game no ads, slope game speed boost, slope game controls, slope game for mobile, slope game lag fix, why slope game is popular, slope game alternatives">
-<meta name="author" content="slope unblocked Games Team">			
-<meta name="publisher" content="slope unblocked Games Team">			
-	<link rel="canonical" href="https://slopeunblocked-online.github.io/">
+  <title>Cluster Rush|Cluster Rush Unblocked</title>
+  <meta name="description" content="Cluster Rush is a fast paced parkour game where you leap across speeding trucks. Dodge obstacles, stay alive, and enjoy chaotic fun play Cluster Rush now.">
+  <meta name="keywords" content="cluster rush,clusterrush,cluster-rush-online,cluster rush unblocked,cluster rush github">
+<meta name="author" content="cluster rush Games Team">			
+<meta name="publisher" content="cluster rush Games Team">			
+	<link rel="canonical" href="https://cluster-rush-online.github.io/">
   <meta name="robots" content="INDEX, FOLLOW, MAX-SNIPPET:-1, MAX-IMAGE-PREVIEW:LARGE, MAX-VIDEO-PREVIEW:-1" />
   <link rel="icon" href="images/favicon.png" sizes="32x32">
 
@@ -38,7 +38,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <a class="navbar-brand js-scroll-trigger" href="/">
-        <strong>Slope Unblocked</strong>
+        <strong>cluster rush</strong>
       </a>
 
 
@@ -211,13 +211,13 @@
 
 
     <div class="col-lg-4 col-md-6 grid-2 ">
-      <a href="https://slopeunblocked-online.github.io/" target="_blank">
+      <a href="https://cluster-rush-online.github.io/" target="_blank">
       <div class="game-item">
         <div class="list-game">
           <div class="list-thumbnail"><img src="https://slope-online.github.io/images/slope.png" class="small-thumb img-rounded lazyload" alt="Slope Unblocked"></div>
           <div class="list-info">
             <div class="list-title">Server 1</div>
-            <div class="list-category">Slope Unblocked</div>
+            <div class="list-category">cluster rush</div>
       
           </div>
         </div>
@@ -231,13 +231,13 @@
 
 
     <div class="col-lg-4 col-md-6 grid-2 ">
-      <a href="https://cool-math-games.co.uk/game/slope-2/" target="_blank">
+      <a href="https://slopeunblocked-online.github.io/" target="_blank">
       <div class="game-item">
         <div class="list-game">
           <div class="list-thumbnail"><img src="https://slope-online.github.io/images/slope.png" class="small-thumb img-rounded lazyload" alt="Slope Unblocked"></div>
           <div class="list-info">
             <div class="list-title">Server 2</div>
-            <div class="list-category">Slope Unblocked</div>
+            <div class="list-category">cluster rush unblocked</div>
       
           </div>
         </div>
