--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="canonical" href="https://cluster-rush-online.github.io/">
   <meta name="robots" content="INDEX, FOLLOW, MAX-SNIPPET:-1, MAX-IMAGE-PREVIEW:LARGE, MAX-VIDEO-PREVIEW:-1" />
   <link rel="icon" href="images/favicon.png" sizes="32x32">
+<link rel="icon" href="favicon.png" type="image/x-icon">
 
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/jquery-comments.css">
